# sdnc

./: .gitignore  Cargo.toml  README.md  example_config.toml  install.sh  sdnc.service  test.html  update.sh
src/: config.rs  database.rs  events.rs  handlers.rs  main.rs  recaptcha_verify.rs
src/sql/: create_tables.sql
src/templates/: event_grid.html
www/: config.toml
www/content/: _index.md  captcha.html  events.md  join.md  rules.md
www/public/: style.css
www/sass/: styles.scss
www/templates/: index.html
www/templates/shortcodes/: events.html  hero_image.html  invite_form.html
