[package]
name = "sdnc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
lazy_static = "1.5.0"
reqwest = "0.12.23"
serde = "1.0.228"
serde_json = "1.0.145"
serenity = "0.12.4"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs"] }
